[gd_scene load_steps=4 format=3 uid="uid://iejrobjxl7f1"]

[ext_resource type="Script" path="res://scripts/UiAbilitySlot.gd" id="1_t2c2y"]
[ext_resource type="Texture2D" uid="uid://dclq1v3i7h5nn" path="res://art/inventory/Ui_Display_AbilityV2.png" id="2_it5be"]
[ext_resource type="FontFile" uid="uid://dthdwesvq0dpa" path="res://art/joystix monospace.otf" id="4_387cy"]

[node name="UiAbilitySlot" type="Panel"]
self_modulate = Color(1, 1, 1, 0)
offset_right = 32.0
offset_bottom = 32.0
script = ExtResource("1_t2c2y")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 0
offset_right = 32.0
offset_bottom = 32.0

[node name="SlotImage" type="Sprite2D" parent="CenterContainer"]
texture = ExtResource("2_it5be")
centered = false
offset = Vector2(-16, -16)

[node name="EqippedAbilityImage" type="Sprite2D" parent="CenterContainer"]
centered = false

[node name="UsesCounter" type="Label" parent="."]
layout_mode = 0
offset_left = 8.0
offset_top = 31.0
offset_right = 328.0
offset_bottom = 251.0
scale = Vector2(0.05, 0.05)
theme_override_fonts/font = ExtResource("4_387cy")
theme_override_font_sizes/font_size = 120
text = "1"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="control_key" type="Label" parent="."]
layout_mode = 0
offset_left = 8.4
offset_top = -11.45
offset_right = 328.4
offset_bottom = 208.55
scale = Vector2(0.05, 0.05)
theme_override_fonts/font = ExtResource("4_387cy")
theme_override_font_sizes/font_size = 120
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
